--- a/Artist.html
+++ b/Artist.html
@@ -145,7 +145,7 @@ C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         <nav class="navigation">
           <ul>
             <li>
-              <a href="Homepage.html">Back to Homepage<span></span></a>
+              <a href="index.html">Back to Homepage<span></span></a>
             </li>
           </ul>
         </nav>
